--- a/Examples/MotionSensor/pom.xml
+++ b/Examples/MotionSensor/pom.xml
@@ -16,7 +16,7 @@
 	</properties>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>il.ac.bgu.bp</groupId>
 			<artifactId>BPjs.Context</artifactId>
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>com.github.bthink-bgu</groupId>
 			<artifactId>BPjs</artifactId>
-			<version>0.9.5</version> 
+			<version>0.9.5</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
@@ -46,12 +46,27 @@
 			<version>5.3.7.Final</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.2.5</version>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.25.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate.dialect/sqlite-dialect -->
+		<dependency>
+			<groupId>com.github.gwenn</groupId>
+			<artifactId>sqlite-dialect</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+
+
+
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<!--<dependency>-->
+			<!--<groupId>org.postgresql</groupId>-->
+			<!--<artifactId>postgresql</artifactId>-->
+			<!--<version>42.2.5</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
