--- a/Examples/MotionSensor/pom.xml
+++ b/Examples/MotionSensor/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.roomsexample.RoomsExample</exec.mainClass>
+        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.contextService.roomsexample.RoomsExample</exec.mainClass>
     </properties>
 
     <dependencies>
@@ -22,7 +22,7 @@
             <artifactId>BPjs.Context</artifactId>
             <version>0.5</version>
             <!-- <scope>system</scope>
-            <systemPath>../BPjs.Context/</systemPath> -->
+            <systemPath>../BPjs.ContextService/</systemPath> -->
         </dependency>
 
         <dependency>
@@ -107,7 +107,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>il.ac.bgu.cs.bp.bpjs.context.roomsexample.RoomsExample</mainClass>
+                            <mainClass>il.ac.bgu.cs.bp.bpjs.contextService.roomsexample.RoomsExample</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
