--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<modules>
+		<module>Examples</module>
+	</modules>
+
 	<dependencies>
 		<dependency>  
 			<groupId>com.github.bthink-bgu</groupId>
