--- a/Examples/TTT/pom.xml
+++ b/Examples/TTT/pom.xml
@@ -26,8 +26,7 @@
             <groupId>il.ac.bgu.bp</groupId>
             <artifactId>BPjs.Context</artifactId>
             <version>0.5</version>
-            <!-- <scope>system</scope>
-            <systemPath>../BPjs.ContextService/</systemPath> -->
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -37,12 +36,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.bthink-bgu</groupId>
-            <artifactId>BPjs</artifactId>
-            <version>0.9.5</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -50,7 +43,7 @@
             <version>5.3.7.Final</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc &ndash;&gt;-->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
@@ -63,36 +56,22 @@
             <version>0.1.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.2.11</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.2.11</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.2.11</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version>
-        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <testResources>
             <testResource>
-                <directory>${project.basedir}/src/test/resources</directory>
+                <directory>src/test/resources</directory>
                 <filtering>true</filtering>
             </testResource>
             <testResource>
-                <directory>${project.basedir}/src/main/resources</directory>
+                <directory>src/main/resources</directory>
             </testResource>
         </testResources>
         <plugins>
@@ -120,5 +99,3 @@
         </plugins>
     </build>
 </project>
-
-
