--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -4,13 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>il.ac.bgu.bp</groupId>
-    <artifactId>examples</artifactId>
+    <groupId>com.github.bthink-bgu</groupId>
+    <artifactId>BPjs.Context.Examples</artifactId>
     <name>Examples</name>
     <version>0.5</version>
     <packaging>pom</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
         <exec.mainClass>should be filled in child module</exec.mainClass>
     </properties>
 
@@ -22,7 +24,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>il.ac.bgu.bp</groupId>
+            <groupId>com.github.bthink-bgu</groupId>
             <artifactId>BPjs.Context</artifactId>
             <version>0.5</version>
             <scope>compile</scope>
