--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>il.ac.bgu.bp</groupId>
+	<groupId>com.github.bthink-bgu</groupId>
 	<artifactId>BPjs.Context</artifactId>
 	<version>0.5</version>
 	<packaging>jar</packaging>
