--- a/Examples/Room/pom.xml
+++ b/Examples/Room/pom.xml
@@ -6,11 +6,11 @@
 
     <parent>
         <groupId>com.github.bthink-bgu</groupId>
-        <artifactId>BPjs.Context.Examples</artifactId>
-        <version>0.5</version>
+        <artifactId>BPjs-Context-Examples</artifactId>
+        <version>0.3</version>
     </parent>
-    <artifactId>BPjs.Context.Examples.Room</artifactId>
-    <version>0.5</version>
+    <artifactId>BPjs-Context-Examples-Room</artifactId>
+    <version>0.3</version>
     <name>Room Example</name>
     <packaging>jar</packaging>
 
