--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.bthink-bgu</groupId>
-	<artifactId>BPjs.Context</artifactId>
-	<version>0.5</version>
+	<artifactId>BPjs-Context</artifactId>
+	<version>0.3</version>
 	<packaging>pom</packaging>
 
 	<modules>
