--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.github.bthink-bgu</groupId>
 	<artifactId>BPjs-Context-Core</artifactId>
 	<name>Core</name>
-	<version>0.3</version>
+	<version>v0.3-alpha</version>
 	<packaging>jar</packaging>
 
 	<properties>
