--- a/Examples/Room/pom.xml
+++ b/Examples/Room/pom.xml
@@ -7,25 +7,16 @@
     <parent>
         <groupId>com.github.bthink-bgu</groupId>
         <artifactId>BPjs-Context-Examples</artifactId>
-        <version>0.3</version>
+        <version>v0.3-alpha</version>
     </parent>
     <artifactId>BPjs-Context-Examples-Room</artifactId>
-    <version>0.3</version>
+    <!--<version>0.3</version>-->
     <name>Room Example</name>
     <packaging>jar</packaging>
 
     <properties>
         <exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.examples.room.Main</exec.mainClass>
     </properties>
-
-    <!--<dependencies>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.bthink-bgu</groupId>-->
-            <!--<artifactId>BPjs.Context.Examples</artifactId>-->
-            <!--<version>0.5</version>-->
-            <!--<scope>pom</scope>-->
-        <!--</dependency>-->
-    <!--</dependencies>-->
 </project>
 
 
