--- a/Examples/TTT/pom.xml
+++ b/Examples/TTT/pom.xml
@@ -7,10 +7,10 @@
     <parent>
         <groupId>com.github.bthink-bgu</groupId>
         <artifactId>BPjs-Context-Examples</artifactId>
-        <version>0.3</version>
+        <version>v0.3-alpha</version>
     </parent>
     <artifactId>BPjs-Context-Examples-TTT</artifactId>
-    <version>0.3</version>
+    <!--<version>0.3</version>-->
     <name>Tic-Tac-Toe Example</name>
     <packaging>jar</packaging>
 
