--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.github.bthink-bgu</groupId>
 	<artifactId>BPjs-Context</artifactId>
-	<version>0.3</version>
+	<version>v0.3-alpha</version>
 	<packaging>pom</packaging>
 
 	<modules>
