--- a/Examples/Room/pom.xml
+++ b/Examples/Room/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.examples.room.Main</exec.mainClass>
+        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.contextName.examples.room.Main</exec.mainClass>
     </properties>
 </project>
 
