--- a/Examples/TTT/pom.xml
+++ b/Examples/TTT/pom.xml
@@ -15,6 +15,6 @@
     <packaging>jar</packaging>
 
     <properties>
-        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.examples.ttt.Main</exec.mainClass>
+        <exec.mainClass>il.ac.bgu.cs.bp.bpjs.contextName.examples.ttt.Main</exec.mainClass>
     </properties>
 </project>
