Fixed TTT More functionality to ContextService.java

--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -22,6 +22,12 @@
 			<version>0.9.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>27.0.1-jre</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
