--- a/Examples/Room/pom.xml
+++ b/Examples/Room/pom.xml
@@ -7,10 +7,10 @@
     <parent>
         <groupId>com.github.bthink-bgu</groupId>
         <artifactId>BPjs-Context-Examples</artifactId>
-        <version>v0.5-alpha</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>BPjs-Context-Examples-Room</artifactId>
-    <!--<version>0.3</version>-->
+    <version>${examples.room.version}</version>
     <name>Room Example</name>
     <packaging>jar</packaging>
 
