--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -4,15 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.bthink-bgu</groupId>
+    <parent>
+        <groupId>com.github.bthink-bgu</groupId>
+        <artifactId>BPjs-Context</artifactId>
+        <version>1.0.0</version>
+    </parent>
     <artifactId>BPjs-Context-Examples</artifactId>
-    <version>v0.5-alpha</version>
+    <version>1.0.0</version>
     <name>Examples</name>
     <packaging>pom</packaging>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
         <exec.mainClass>should be filled in child module</exec.mainClass>
     </properties>
 
@@ -25,28 +27,9 @@
         <dependency>
             <groupId>com.github.bthink-bgu</groupId>
             <artifactId>BPjs-Context-Core</artifactId>
-            <version>v0.5-alpha</version>
+            <version>${core.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.bthink-bgu</groupId>
-            <artifactId>BPjs</artifactId>
-            <version>0.9.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.3.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.3.7.Final</version>
-        </dependency>
 
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc &ndash;&gt;-->
         <dependency>
