--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -160,7 +160,8 @@
     <modules>
         <module>Room</module>
         <module>TTT</module>
-	    <module>Chess</module>
+        <module>Chess</module>
+        <module>GOL</module>
     </modules>
 
 </project>
