--- a/Examples/Room/pom.xml
+++ b/Examples/Room/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>BPjs-Context-Examples-Room</artifactId>
-    <version>${examples.room.version}</version>
+    <version>0.1.0</version>
     <name>Room Example</name>
     <packaging>jar</packaging>
 
