--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.9</java.version>
-
-		<core.version>0.1.0</core.version>
-		<examples.ttt.version>0.1.0</examples.ttt.version>
-		<examples.room.version>0.1.0</examples.room.version>
-		<examples.chess.version>0.1.0</examples.chess.version>
-		<examples.gol.version>0.1.0</examples.gol.version>
-		<examples.c4.version>0.1.0</examples.c4.version>
+		<maven.compiler.source>9</maven.compiler.source>
+		<maven.compiler.target>9</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
@@ -32,7 +27,25 @@
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
-				<version>5.3.7.Final</version>
+				<version>5.4.11.Final</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate.javax.persistence</groupId>
+				<artifactId>hibernate-jpa-2.1-api</artifactId>
+				<version>1.0.2.Final</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>28.2-jre</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jetbrains</groupId>
+				<artifactId>annotations</artifactId>
+				<version>19.0.0</version>
 			</dependency>
 
 			<dependency>
@@ -59,6 +72,7 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<modules>
