Cleanup for effect functions

--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -127,11 +127,10 @@
     </build>
 
     <modules>
-        <module>Room</module>
+<!--        <module>Room</module>-->
         <module>TTT</module>
-        <module>Chess</module>
-        <module>GOL</module>
-        <module>ConnectedFour</module>
+<!--        <module>Chess</module>-->
+<!--        <module>GOL</module>-->
     </modules>
 
 </project>
