Auto refresh entities in ContextService

--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -127,9 +127,9 @@
     </build>
 
     <modules>
-<!--        <module>Room</module>-->
+        <module>Room</module>
         <module>TTT</module>
-<!--        <module>Chess</module>-->
+        <module>Chess</module>
 <!--        <module>GOL</module>-->
     </modules>
 
