--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<exec.mainClass>il.ac.bgu.cs.bp.bpjs.contextService.Verifier</exec.mainClass>
+		<exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.Verifier</exec.mainClass>
 	</properties>
 
 	<dependencies>
