--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>com.github.bthink-bgu</groupId>
 			<artifactId>BPjs</artifactId>
-			<version>0.11.2-SNAPSHOT</version>
+			<version>0.11.1</version>
 		</dependency>
 	</dependencies>
 </project>
