--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Publish a new release
+name: Create a new release
 
 # Controls when the workflow will run
 on:
