--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,8 +14,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  raise-version:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -45,6 +44,10 @@ jobs:
           git commit -m "raise version"
           git push
           
+  create-release:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    steps:
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
