--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -45,6 +45,7 @@ jobs:
           git push
           
   create-release:
+    needs:  raise-version
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
