--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  raise-version:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -44,11 +44,10 @@ jobs:
           git commit -m "raise version"
           git push
           
-  create-release:
-    needs:  raise-version
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    steps:
+      - name: Set SHA version
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
@@ -59,6 +58,7 @@ jobs:
           release_name: Release ${{ env.VER }}
           draft: false
           prerelease: false
+          commitish: ${{ steps.vars.outputs.sha_short }}
           
       # From here: create uber-jar and upload as an asset to the release.
       - name: Set up JDK 11
