--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -38,11 +38,12 @@ jobs:
           echo "VER==${{ env.VER }} ===  VER_MAJOR==${{ env.VER_MAJOR }} === VER_MINOR==${{ env.VER_MINOR }}"
           perl -pi -e '$a=1 if(!$a && s|(<version>[0-9]+\.[0-9]+\.)[0-9]*|${1}${{ env.VER_MINOR }}|);' pom.xml
           perl -pi -e '$a=1 if(!$a && s|(<version>[0-9]+\.[0-9]+\.)[0-9]*|${1}${{ env.VER_MINOR }}|);' README.md
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "raise version"
-          git push
+          
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: raise version
+          committer_name: GitHub Actions
+          committer_email: actions@github.com
           
       - name: Set SHA version
         id: vars
